Admin user create, user listing and fix authentication issue.
