# app/Http/Controllers/AuthController.php
@@ -2,84 +2,103 @@
 
 namespace App\Http\Controllers;
 
-use App\Http\Controllers\Controller;
 use App\Http\Requests\Auth\LoginRequest;
+use App\Services\Auth\AuthInterface;
 use App\Services\Auth\AuthService;
 use OpenApi\Annotations as OA;
-use Illuminate\Http\Request;
-use Illuminate\Support\Facades\Auth;
 
+/**
+ * @OA\Info(title="Authentication API", version="1.0")
+ */
 class AuthController extends Controller {
-    public function __construct(private AuthService $auth_service) {
+    public function __construct(private AuthInterface $auth) {
     }
 
     /**
-     * @OA\Get(
-     *     path="/api/admin/login",
+     * @OA\Post(
+     *     path="/api/v1/admin/login",
      *     description="Admin login",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *            required={"email", "password"},
+     *            @OA\Property(property="email", type="email", format="string", example="admin@email.com"),
+     *            @OA\Property(property="password", type="password", format="string", example="123456"),
+     *         ),
+     *      ),
      *     @OA\Response(
      *          response=200,
-     *          description="Successful operation",
-     *          @OA\JsonContent(ref="#/app/Helper/functions/successResponse")
+     *          description="Logged in successfully",
      *       ),
      *      @OA\Response(
      *          response=400,
-     *          description="Wrong operation",
-     *          @OA\JsonContent(ref="#/app/Helper/functions/errorResponse")
-     *      ),
+     *          description="Something went wrong",
+     *      )
      * )
      */
     public function adminLogin(LoginRequest $request) {
-        return $this->auth_service->login_process($request);
+        return $this->auth->login_process($request);
     }
 
     /**
      * @OA\Get(
-     *     path="/api/admin/logout",
-     *     description="Logout as an admin"
-     *     @OA\Response(
+     *     path="/api/v1/admin/logout",
+     *     description="Logout as an admin",
+     *     @OA\Response (
      *          response=200,
-     *          description="Successful logged out operation as an admin",
-     *          @OA\JsonContent(ref="#/app/Helper/functions/successResponse")
+     *          description="Successfully logged out",
+     *     ),
+     *      @OA\Response (
+     *          response=401,
+     *          description="Unauthenticated",
      *     )
      * )
      */
     public function adminLogout() {
-        return $this->auth_service->logged_out();
+        return $this->auth->logged_out();
     }
 
     /**
-     * @OA\Get(
-     *     path="/api/user/login",
+     * @OA\Post(
+     *     path="/api/v1/user/login",
      *     description="User login",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *            required={"email", "password"},
+     *            @OA\Property(property="email", type="email", format="string", example="user@email.com"),
+     *            @OA\Property(property="password", type="password", format="string", example="123456"),
+     *         ),
+     *      ),
      *     @OA\Response(
-     *          response=200,
-     *          description="Successful operation",
-     *          @OA\JsonContent(ref="#/app/Helper/functions/successResponse")
+     *          response="200",
+     *          description="Logged in successfully",
      *       ),
      *      @OA\Response(
-     *          response=400,
-     *          description="Wrong operation",
-     *          @OA\JsonContent(ref="#/app/Helper/functions/errorResponse")
+     *          response="400",
+     *          description="Something went wrong",
      *      ),
      * )
      */
     public function userLogin(LoginRequest $request) {
-        return $this->auth_service->login_process($request);
+        return $this->auth->login_process($request);
     }
 
     /**
      * @OA\Get(
-     *     path="/api/user/logout",
-     *     description="Logout as an user"
-     *     @OA\Response(
-     *          response=200,
-     *          description="Successful logged out operation as an user",
-     *          @OA\JsonContent(ref="#/app/Helper/functions/successResponse")
+     *     path="/api/v1/user/logout",
+     *     description="Logout as an user",
+     *     @OA\Response (
+     *          response="200",
+     *          description="Successfully logged out",
+     *     ),
+     *     @OA\Response (
+     *          response=401,
+     *          description="Unauthenticated",
      *     )
-     *)
+     * )
      */
     public function userLogout() {
-        return $this->auth_service->logged_out();
+        return $this->auth->logged_out();
     }
 }
